--- a/package.json
+++ b/package.json
@@ -38,9 +38,18 @@
             "last 1 safari version"
         ]
     },
+    "lint-staged": {
+      "*.scss": "prettier --write",
+      "*.js": [
+        "prettier --write",
+        "eslint --fix"
+      ]
+    },
     "devDependencies": {
         "eslint": "^8.53.0",
         "eslint-config-prettier": "^9.0.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.0.2",
         "prettier": "^3.0.3"
     }
 }
