--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "format": "prettier --write \"{,!(node_modules),!(.next)/**/}*.{js,css,scss,test.js}\"",
-        "lint": "eslint --fix \"{,!(node_modules),!(.next)/**/}*.{js,css,scss,test.js}\""
+        "format": "prettier --write \"{,!(node_modules),!(.next)/**/}*.{js, test.js}\"",
+        "lint": "eslint --fix \"{,!(node_modules),!(.next)/**/}*.{js, test.js}\""
     },
     "eslintConfig": {
         "extends": [
